Removed underscore.js
Removed underscore.js

--- a/src/index.html
+++ b/src/index.html
@@ -115,11 +115,11 @@
 		
 		<script src="jquery-1.11.1.min.js"></script>
 		<script src="knockout-3.3.0.min.js"></script>
-		<script src="underscore-1.8.3.min.js"></script>
 
 		<script src="js.js"></script>
 		
 		<script src="scripts/globals.js"></script>
+		<script src="scripts/utils.js"></script>
 		<script src="scripts/pub-sub-mediator.js"></script>
 		<script src="scripts/repository.js"></script>
 		
