--- a/src/index.html
+++ b/src/index.html
@@ -121,10 +121,10 @@
 		<script src="scripts/globals.js"></script>
 		<script src="scripts/utils.js"></script>
 		<script src="scripts/pub-sub-mediator.js"></script>
-		<script src="scripts/repository.js"></script>
+		<script src="scripts/data-service.js"></script>
 		
 		<script src="scripts/models.js"></script>
-		<script src="scripts/view-models.js"></script>
+		<script src="scripts/controllers.js"></script>
 		<script src="scripts/on-document-load.js"></script>
 	</body>
 </html>
