--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,7 @@
 		</script>
 		<![endif]-->
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	</head>
 	
 	<body>
